# websocket-chat-rust

./: Cargo.toml
src/: main.rs  server.rs  session.rs
static/: index.html
