[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix = "0.13.3"
actix-files = "0.6.5"
actix-web-actors = "4.3.0"
rand = "0.9.0-alpha.1"
log = "0.4.21"
env_logger = "0.11.3"